assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Fredoka&display=swap');

* {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
}

body {
  font-family: Fredoka, sans-serif;
  font-weight: 400;
  color: #241d1d;
}

/* HR and heading styling */

h1 {
  font-family: 'Berkshire Swash', sans-serif;
  font-size: 280%;
  letter-spacing: 0.1em;
}

h3 {
  color: #023744;
  font-size: 140%;
}

h2, h4 {
  font-size: 160%;
  text-transform: uppercase;
  color: #eee;
  background-color: #038686;
  text-align: center;
  max-width: max-content;
  margin: 0 auto;
  padding: 5px 30px 5px 30px;
  border-radius: 4px;
}

#apply h4 {
  font-size: 140%;
  margin-top: 20px;
}

hr {
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right,
      rgba(219, 219, 219, 0),
      rgba(255, 255, 255, 0.75),
      rgba(119, 119, 119, 0));
}

#hr-vert {
  border: none;
  border-left: 3px;
  height: 400px;
  width: 3px;
  background-image: linear-gradient(180deg,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 0.75),
      rgba(0, 0, 0, 0));
}

#footer-hr {
  width: 100%;
  height: 3px;
  background-color: #004b4b;
  
}

/*Buttons*/

.apply-btn {
  font-family: Fredoka, sans-serif;
  font-weight: 700;
  font-size: 120%;
  color: #eee;
  background-color: #038686;
  text-align: center;
  max-width: max-content;
  margin-top: 30px;
  padding: 15px 10px;
  border-radius: 15px;
}

.apply-btn:hover {
  border: 3px solid rgba(0, 0, 0, 0.4);
  text-transform: uppercase;
}


/*Navigation*/

#navbar {
  padding: 30px;
}

.nav-links {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  font-size: 160%;
  font-weight: 700;
}

.nav-links li {
  list-style-type: none;
  margin: 1%;
}

.nav-links a {
  color: #eee;
  text-decoration: none;
  padding: 10px;
}

.nav-links a:hover {
  color: #06b6b6;
  border: 3px solid #eee;
  background-color: rgba(0, 0, 0, 0.4);
  border-radius: 20px;
}

/*Logo animation*/

#logo {
  padding: 10px;

  /* animates bounce effect for logo on landing page*/
  animation: logo-bounce 2s ease;
}

@keyframes logo-bounce {

  0%,
  20%,
  50%,
  80%,
  100% {
    transform: translateY(0);
  }

  40% {
    transform: translateY(-30px);
  }

  60% {
    transform: translateY(-15px);
  }
}

/* Header content and hero image */

.hero-img {
  height: 600px;
  background-image: url(../images/hero_img.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.header-overlay {
  background: linear-gradient(rgba(0, 0, 0, 0.8),
      rgba(1, 28, 49, 0.8),
      rgba(3, 153, 145, 0.8));
  overflow: hidden;
  height: 100%;
  z-index: 2;
}

.header-content {
  color: #eee;
  position: absolute;
  top: 100px;
  left: 0;
  right: 0;
  margin: 0 auto;
  padding: 10px;
  text-align: center;
  line-height: 1.3;
  font-weight: 400;
  font-size: 140%;
  max-width: 700px;
  width: 100%;
  z-index: 3;
}



/*About section*/

#about {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  margin-top: 20px;
}

.break {
  flex-basis: 100%;
  width: 0;
}

.info-right,
.info-left {
  width: 40%;
  margin: 0 auto;
  text-align: center;
  margin-top: 20px;
}

#about li {
  list-style-type: none;
  font-weight: 600;
  margin: 5px;
  color: #004b4b;
}

#about p {
  font-size: 110%;
  margin: 20px;
}


/*Games section*/

#games {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 30px;
  background: linear-gradient(rgba(0, 0, 0, 0.8),
      rgba(1, 28, 49, 0.8),
      rgba(3, 153, 145, 0.8)),
    url(../images/games_img.jpg) no-repeat top center;
  background-size: cover;
}

#games>h1 {
  color: #ffffff;
  margin: 15px;
}

#gamecard-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.game-card {
  background-color: rgb(255, 255, 255);
  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
  border-radius: 10px;
  width: 30%;
  margin: 20px;
}

.game-card-header img {
  width: 100%;
  height: 250px;
  object-fit: cover;
  object-position: center;
  border-radius: 10px 10px 0 0;
}

.game-card-body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding: 10px;
}

.game-card-body>p {
  margin-top: 20px;
  margin-bottom: 20px;
}

.developer-info {
  font-style: italic;
  color: #818181;
  font-size: 15px;
  padding: 5px;
  margin: 5px;
}

/*Footer*/

footer {
  display: flex;
  justify-content: center;
  height: 200px;
  font-size: 100%;

}

.social-media {
  margin: 1%;
  text-align: center;
  padding: 1%;

}

.social-media li {
  list-style-type: none;
  display: inline;
}

.social-media i {
  font-size: 180%;
  margin: 5%;
  color: #004b4b;
}

/*Application section*/

#apply {
  max-width: 950px;
  margin: 0 auto;
  text-align: center;
}

form {
  width: 100%;
  margin-top: 30px;
}

.field {
  display: flex;
  padding: 2%;
}

.text-input {
  border: none;
  border-bottom: 3px solid #004b4b;
  border-radius: 10px;
  background-color: rgba(1, 110, 110, 0.2);
  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
  width: 50%;
  height: 40px;
  margin: 1%;

}

textarea {
  border: none;
  border-bottom: 3px solid #023744;
  border-radius: 10px;
  background-color: rgba(1, 110, 110, 0.2);
  padding: 5px;
  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
  width: 100%;
}

input::placeholder,
textarea::placeholder {
  font-size: 18px;
  color: #023744;
  padding: 5px;
}

input[type=submit] {
  margin: 0 auto;
}



/*MEDIA QUERIES*/

@media screen and (max-width: 1340px) {

  #gamecard-wrapper > .break {
    display: none;
  }

  .game-card {
    min-width: 40%;
  }
}


@media screen and (max-width: 950px) {

  #about {
    flex-direction: column;
    justify-content: center;
  }

  .info-left,
  .info-right {
    width: 70%;
  }

  #hr-vert {
    display: none;
  }

  .apply-shortcut {
    margin: 0 auto;
  }

}

@media screen and (max-width: 800px) {

  .header-content {
    font-size: 120%;
  }

  .game-card {
    min-width: 80%;
  }


}

